--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "author": "fidelve",
   "license": "MIT",
@@ -13,13 +14,15 @@
     "@types/mocha": "^10.0.0",
     "eslint": "^8.26.0",
     "eslint-plugin-json": "^3.1.0",
-    "mocha": "^10.1.0"
+    "mocha": "^10.1.0",
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ws": "^8.10.0"
   }
 }
