fixed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "membrane-interview-challenge",
+  "name": "binance-market-info-api",
   "version": "1.0.0",
   "description": "",
   "main": "./src/app.js",
